parser/src/test/resources/corpus/valid/26_accrue_with_dc_literal.ff
rule "Accrue With DC Literal" {
  accrue 1.5% per annum on opening_nav using actual/365
}
