parser/src/test/resources/corpus/invalid/21_accrue_missing_on.ff
rule "Accrue Missing On" {
  accrue rate basis using actual/365
}
